--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -30,7 +30,7 @@
 }
 
 /* Input Styling */
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=number] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
