--- a/ui/css/main.css
+++ b/ui/css/main.css
@@ -7,12 +7,11 @@ html, body {
 /*FLEX ITEMS*/
 .nav-container, .nav-menu, .main-section,
 .sc-heading, .footer-content, .dashboard-section,
-.dash-header, .dash-components, .dash-component, .dash-component-icon,
-.dash-component-title, .dash-component-help,
-.products-section, .all-products-section,
-.product-item, .product-image, .product-details, .sidebar-option,
-.pd-section, .pd-item, .pd-details, .pd-header, .pd-options,
-.pd-options-1, .sc-item, .item-row, .item-label, .item-value {
+.dash-header, .dash-components, .dash-component, .dash-component-icon, .dash-component-title, .dash-component-help,
+.products-section, .all-products-section, .product-item, .product-image, .product-details,
+.sidebar-option, .pd-section, .pd-item, .pd-details, .pd-header, .pd-options, .pd-options-1,
+.sc-item, .item-row, .item-label, .item-value ,
+.records-section, .record-items-section, .record-item, .record-details{
     display: flex;
 }
 
@@ -190,7 +189,7 @@ html, body {
 
 .my-side-bar {
     flex: 1;
-    /*background-color: #212121;*/
+    background-color: #B8BCAE;
 }
 
 .product-side-bar {
@@ -267,7 +266,7 @@ html, body {
 }
 
 /* SHOPPING CART*/
-.cart-section{
+.cart-section {
     display: flex;
     justify-content: center;
     flex: 3;
@@ -311,7 +310,7 @@ html, body {
     justify-content: flex-end;
 }
 
-.item-remove{
+.item-remove {
     margin-top: 3px;
     background-color: #5C5C5C;
     flex: 1;
@@ -319,7 +318,7 @@ html, body {
     border-radius: 20px;
 }
 
-.item-remove:hover{
+.item-remove:hover {
     background-color: red;
     color: #ffffff;
     font-weight: 500;
@@ -351,4 +350,38 @@ html, body {
 .cart-checkout:hover {
     background-color: #379634;
     color: white;
+}
+
+/*RECORDS SECTION*/
+.records-section {
+    flex-direction: column;
+    flex: 3;
+    justify-content: center;
+}
+
+.record-items-section {
+    flex-direction: column;
+}
+
+.record-item {
+    background-color: #ACABA0;
+    align-self: center;
+    margin: 10px;
+    min-width: 40%;
+    max-width: 40%;
+    height: 100px;
+}
+
+.record-item:hover {
+    background-color: #379634;
+    color: #ffffff;
+}
+
+.record-details {
+    flex-direction: column;
+    padding: 5px;
+}
+
+.record-details-extra {
+    font-size: 14px;
 }
