--- a/ui/css/main.css
+++ b/ui/css/main.css
@@ -505,11 +505,20 @@ td {
 }
 
 .sidebar-option a {
-    /*text-decoration: none;*/
-    /*color: #ffffff;*/
     display: block;
     height: 100%;
     width: 100%;
     text-decoration: none;
 
 }
+
+/*@media only screen and (max-width: 768px) {*/
+    /*.main-section {*/
+        /*flex-direction: column;*/
+    /*}*/
+
+    /*.my-form {*/
+        /*max-width: 250px;*/
+    /*}*/
+
+/*}*/
