--- a/css/main.css
+++ b/css/main.css
@@ -554,15 +554,42 @@ td {
     to {bottom: 0; opacity: 0;}
 }
 
-/*@media only screen and (max-width: 768px) {*/
-    /*.main-section {*/
-        /*flex-direction: column;*/
-    /*}*/
+@media only screen and (max-width: 768px) {
+    .nav-container{
+        flex-direction: column;
 
-    /*.my-form {*/
-        /*max-width: 250px;*/
-    /*}*/
+    }
 
-/*}*/
+    .nav-menu{
+        flex-direction: column;
+        justify-content: left;
+    }
+
+    .nav-menu button{
+        width: 100%;
+    }
+
+    .dash-header {
+        justify-content: center;
+        font-size: 25px;
+        padding-top: 10px;
+        height: 40px;
+    }
+
+    .dash-components {
+        flex-direction: column;
+
+    }
+    .dash-component{
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .my-form {
+        max-width: 250px;
+    }
+
+}
 
 
