[Chore #161983331] Add width of record item layout in small display

--- a/css/main.css
+++ b/css/main.css
@@ -597,11 +597,12 @@ td {
         justify-content: center;
     }
 
-    .product-item {
+    .product-item, .record-item {
         margin-left: auto;
         margin-right: auto;
         min-width: 80%;
     }
+
 
 }
 
