--- a/css/main.css
+++ b/css/main.css
@@ -509,7 +509,8 @@ td {
 #snackbar {
     visibility: hidden;
     min-width: 250px;
-    margin-left: -125px;
+    margin-left: auto;
+    margin-right: auto;
     background-color: #333;
     color: #fff;
     text-align: center;
@@ -518,7 +519,6 @@ td {
     padding: 16px;
     position: fixed;
     z-index: 1;
-    left: 50%;
     bottom: 30px;
 }
 
